--- a/program.html
+++ b/program.html
@@ -119,123 +119,121 @@
 
 			<!-- Program Related Box -->
 			<div class="row program-row">
-				<div class="row">
-					<!-- Title -->
-					<div class="row title p-3" id="title">
-						<div class="col-lg-5">
-							<strong>PROGRAM NAME </strong>
-						</div>
-						<div class="col-lg-4">
-							<strong>FACULTY</strong>
-						</div>
-						<div class="col-lg-3">
-							<strong>DEGREE</strong>
-						</div>
-						<hr class="mt-2 mb-2" />
+				<!-- Title -->
+				<div class="row title p-3 pb-0" id="title">
+					<div class="col-lg-5">
+						<strong>PROGRAM NAME </strong>
 					</div>
-					<!-- Programs -->
-					<div class="row p-3 pt-0">
-						<div class="col-lg-5">
-							<a href="">Accounting</a>
-						</div>
-						<div class="col-lg-4">
-							<p>Business Administration</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Bachelor Degree (4 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<div class="col-lg-4">
+						<strong>FACULTY</strong>
 					</div>
-					<div class="row p-3 pt-0">
-						<div class="col-lg-5">
-							<a href="">Actuarial Science</a>
-						</div>
-						<div class="col-lg-4">
-							<p>Science</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Bachelor Degree (4 Years)</p>
-							<p>Masters Degree (2 Years)</p>
-							<p>PhD Degree (3 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<div class="col-lg-3">
+						<strong>DEGREE</strong>
 					</div>
-					<div class="row programs p-3 pt-0">
-						<div class="col-lg-5">
-							<a href="">Administration (Indigenous Management) Certificate</a>
-						</div>
-						<div class="col-lg-4">
-							<p>Centre for Continuing Education</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Certificate (1 - 2 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<hr class="mt-2" />
+				</div>
+				<!-- Programs -->
+				<div class="row p-3 pt-lg-0 pt-md-4">
+					<div class="col-lg-5">
+						<a href="">Accounting</a>
 					</div>
-					<div class="row programs p-3 pt-0">
-						<div class="col-lg-5">
-							<a href=""
-								>Advanced Certificate in Local Government Administration</a
-							>
-						</div>
-						<div class="col-lg-4">
-							<p>Centre for Continuing Education</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Certificate (1 - 2 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<div class="col-lg-4">
+						<p>Business Administration</p>
 					</div>
-					<div class="row programs p-3 pt-0">
-						<div class="col-lg-5">
-							<a href="">Anthropology</a>
-						</div>
-						<div class="col-lg-4">
-							<p>Arts</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Bachelor Degree (4 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<div class="col-lg-3">
+						<p>Bachelor Degree (4 Years)</p>
 					</div>
-					<div class="row programs p-3 pt-0">
-						<div class="col-lg-5">
-							<a href="">Applied Physics</a>
-						</div>
-						<div class="col-lg-4">
-							<p>Science</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Bachelor Degree (4 Years)</p>
-							<p>Masters Degree (2 Years)</p>
-							<p>Phd Degree (3 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<hr class="mt-2" />
+				</div>
+				<div class="row p-3 pt-0">
+					<div class="col-lg-5">
+						<a href="">Actuarial Science</a>
 					</div>
-					<div class="row programs p-3 pt-0">
-						<div class="col-lg-5">
-							<a href="">Art History</a>
-						</div>
-						<div class="col-lg-4">
-							<p>Media, Art, and Performance</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Bachelor Degree (4 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<div class="col-lg-4">
+						<p>Science</p>
 					</div>
-					<div class="row programs p-3 pt-0">
-						<div class="col-lg-5">
-							<a href="">Arts (unsure of major)</a>
-						</div>
-						<div class="col-lg-4">
-							<p>Media, Art, and Performance</p>
-						</div>
-						<div class="col-lg-3">
-							<p>Bachelor Degree (4 Years)</p>
-						</div>
-						<hr class="mt-2" />
+					<div class="col-lg-3">
+						<p>Bachelor Degree (4 Years)</p>
+						<p>Masters Degree (2 Years)</p>
+						<p>PhD Degree (3 Years)</p>
 					</div>
+					<hr class="mt-2" />
+				</div>
+				<div class="row programs p-3 pt-0">
+					<div class="col-lg-5">
+						<a href="">Administration (Indigenous Management) Certificate</a>
+					</div>
+					<div class="col-lg-4">
+						<p>Centre for Continuing Education</p>
+					</div>
+					<div class="col-lg-3">
+						<p>Certificate (1 - 2 Years)</p>
+					</div>
+					<hr class="mt-2" />
+				</div>
+				<div class="row programs p-3 pt-0">
+					<div class="col-lg-5">
+						<a href=""
+							>Advanced Certificate in Local Government Administration</a
+						>
+					</div>
+					<div class="col-lg-4">
+						<p>Centre for Continuing Education</p>
+					</div>
+					<div class="col-lg-3">
+						<p>Certificate (1 - 2 Years)</p>
+					</div>
+					<hr class="mt-2" />
+				</div>
+				<div class="row programs p-3 pt-0">
+					<div class="col-lg-5">
+						<a href="">Anthropology</a>
+					</div>
+					<div class="col-lg-4">
+						<p>Arts</p>
+					</div>
+					<div class="col-lg-3">
+						<p>Bachelor Degree (4 Years)</p>
+					</div>
+					<hr class="mt-2" />
+				</div>
+				<div class="row programs p-3 pt-0">
+					<div class="col-lg-5">
+						<a href="">Applied Physics</a>
+					</div>
+					<div class="col-lg-4">
+						<p>Science</p>
+					</div>
+					<div class="col-lg-3">
+						<p>Bachelor Degree (4 Years)</p>
+						<p>Masters Degree (2 Years)</p>
+						<p>Phd Degree (3 Years)</p>
+					</div>
+					<hr class="mt-2" />
+				</div>
+				<div class="row programs p-3 pt-0">
+					<div class="col-lg-5">
+						<a href="">Art History</a>
+					</div>
+					<div class="col-lg-4">
+						<p>Media, Art, and Performance</p>
+					</div>
+					<div class="col-lg-3">
+						<p>Bachelor Degree (4 Years)</p>
+					</div>
+					<hr class="mt-2" />
+				</div>
+				<div class="row programs p-3 pt-0">
+					<div class="col-lg-5">
+						<a href="">Arts (unsure of major)</a>
+					</div>
+					<div class="col-lg-4">
+						<p>Media, Art, and Performance</p>
+					</div>
+					<div class="col-lg-3">
+						<p>Bachelor Degree (4 Years)</p>
+					</div>
+					<hr class="mt-2" />
 				</div>
 			</div>
 		</main>
