--- a/home.html
+++ b/home.html
@@ -180,7 +180,7 @@
 							id="filter-btn"
 							type="button"
 							class="btn btn-primary me-2"
-							onclick="filter(1)"
+							onclick="filter()"
 						>
 							Filter
 						</button>
