--- a/home.html
+++ b/home.html
@@ -186,12 +186,21 @@
 						</button>
 						<!-- OnClick Filter -->
 						<script>
-							const filter = () => {
-								document.getElementById("left-according").style.display =
-									"flex";
-								document.getElementById("left-according").style.flexDirection =
-									"column";
-							};
+							// const filter = () => {
+							// 	document.getElementById("left-according").style.display =
+							// 		"flex";
+							// 	document.getElementById("left-according").style.flexDirection =
+							// 		"column";
+							// };
+							function filter() {
+								var x = document.getElementById("left-according");
+								if (x.style.display === "none") {
+									x.style.display = "flex";
+									x.style.flexDirection = "column";
+								} else {
+									x.style.display = "none";
+								}
+							}
 						</script>
 					</div>
 					<div>
