--- a/faqPage.html
+++ b/faqPage.html
@@ -84,10 +84,14 @@
 			</div>
 		</nav>
 
+		<!-- FAQs -->
+		<div>
+			<img src="img/faqs.jpg" class="w-75 img-center mx-auto d-block" alt="">
+		</div>
 
 		<!--faQPage Start-->
 		<div class="container">
-			<h2 class="text-center fs-1 p-5">FAQ</h2>
+			<!-- <h2 class="text-center fs-1 mb-5">FAQ</h2> -->
 			<div class="accordion" id="accordionExample">
 				<div class="accordion-item">
 				  <h2 class="accordion-header" id="faqHeadingOne">
