--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>About Us</title>
+<html lang="en">
+	<head>
+		<title>About Us</title>
 
-	<meta charset="UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="FourPage.css">
+		<meta charset="UTF-8" />
 
-</head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" type="text/css" href="FourPage.css" />
+	</head>
 	<body>
 		<!-- Nav -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -83,45 +87,62 @@
 				</div>
 			</div>
 		</nav>
-		
+
 		<!--About US page Start-->
 		<div class="container">
 			<h2>About Us</h2>
 			<p class="aboutUS-pgraph">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, similique reiciendis! Laboriosam temporibus magni aperiam ex dicta, mollitia non iure, maiores est impedit repudiandae qui explicabo commodi quisquam veritatis illo ab dolorem, eum facilis? Ipsum quod ullam debitis eius id est, expedita facere delectus, cupiditate quasi excepturi pariatur cumque quis eligendi quisquam corporis. Quis asperiores ea molestiae a placeat saepe accusantium, quasi odit dignissimos unde nemo esse recusandae fuga laudantium nam maxime cupiditate nesciunt officiis assumenda consectetur distinctio voluptas dolorem rem laborum! Possimus, vitae laudantium debitis dolore maiores cupiditate mollitia? Ullam dignissimos alias laboriosam, excepturi culpa cum officiis tempore labore!
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, similique
+				reiciendis! Laboriosam temporibus magni aperiam ex dicta, mollitia non
+				iure, maiores est impedit repudiandae qui explicabo commodi quisquam
+				veritatis illo ab dolorem, eum facilis? Ipsum quod ullam debitis eius id
+				est, expedita facere delectus, cupiditate quasi excepturi pariatur
+				cumque quis eligendi quisquam corporis. Quis asperiores ea molestiae a
+				placeat saepe accusantium, quasi odit dignissimos unde nemo esse
+				recusandae fuga laudantium nam maxime cupiditate nesciunt officiis
+				assumenda consectetur distinctio voluptas dolorem rem laborum! Possimus,
+				vitae laudantium debitis dolore maiores cupiditate mollitia? Ullam
+				dignissimos alias laboriosam, excepturi culpa cum officiis tempore
+				labore!
 			</p>
 		</div>
 
 		<div class="container mt-5">
-			<div class="row gx-4">				
+			<div class="row gx-4">
 				<div class="col-md-6">
-					<img src="img/Thammasat-University.png" alt="" class="w-100 h-100">
+					<img src="img/Thammasat-University.png" alt="" class="w-100 h-100" />
 				</div>
 				<div class="col-md-6">
 					<h2>We’re Dermstore</h2>
-					<p class="aboutUS-pgraph">Dermstore was created in 1999 by a dermatologist who wanted to better serve his patients with easier access to the treatments their skin needed. From that day through today, our focus is providing the highest quality products and straight-from-the-experts information to guide you through your skin care journey.</p>
+					<p class="aboutUS-pgraph">
+						Dermstore was created in 1999 by a dermatologist who wanted to
+						better serve his patients with easier access to the treatments their
+						skin needed. From that day through today, our focus is providing the
+						highest quality products and straight-from-the-experts information
+						to guide you through your skin care journey.
+					</p>
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="container mt-5">
 			<div class="row">
 				<div class="col-md-6">
 					<h3>The Dermstore Difference</h3>
 					<p>
-						We offer professional-strength formulas from top skin care brands (otherwise only available at a dermatologist’s office), hard-to-find spa care and natural beauty brands, professional hair care and makeup products,
-						and specialty brands from around the world..
-					</p>			
+						We offer professional-strength formulas from top skin care brands
+						(otherwise only available at a dermatologist’s office), hard-to-find
+						spa care and natural beauty brands, professional hair care and
+						makeup products, and specialty brands from around the world..
+					</p>
 				</div>
 				<div class="col-md-6">
-					<img src="img/Thammasat-University.png" alt="" class="w-100 h-100">
+					<img src="img/Thammasat-University.png" alt="" class="w-100 h-100" />
 				</div>
 			</div>
 		</div>
-		
-		
-		
-		<!-- footer -->		
+
+		<!-- footer -->
 		<footer class="bg-dark mt-5">
 			<div class="row container p-4">
 				<div class="col-6">
@@ -139,7 +160,6 @@
 							USER
 						</li>
 					</ul>
-					
 				</div>
 				<div class="col-6">
 					<ul class="list-group list-group-horizontal-lg float-end">
@@ -155,8 +175,10 @@
 			</div>
 		</footer>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+			crossorigin="anonymous"
+		></script>
 	</body>
-</script>
 </html>
