--- a/contactPage.html
+++ b/contactPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
 	<title>Contact Us</title>
 
@@ -92,7 +92,7 @@
 					<div class="card mt-2 mx-auto p-4 bg-light">
 						<div class="card-body bg-light">
 							<div class="container">
-								<form id="contact-form" role="form">
+								<form id="contact-form">
 									<div class="controls">
 										<div class="row">
 											<div class="col-md-6">
@@ -169,6 +169,5 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 	</body>
-</script>
 </html>
 
