--- a/faqPage.html
+++ b/faqPage.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Faq</title>
+<html lang="en">
+	<head>
+		<title>Faq</title>
 
-	<meta charset="UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="FourPage.css">
+		<meta charset="UTF-8" />
 
-</head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" type="text/css" href="FourPage.css" />
+	</head>
 	<body>
 		<!-- Nav -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -86,7 +90,7 @@
 
 		<!-- FAQs -->
 		<div>
-			<img src="img/faqs.jpg" class="w-75 img-center mx-auto d-block" alt="">
+			<img src="img/faqs.jpg" class="w-75 img-center mx-auto d-block" alt="" />
 		</div>
 
 		<!--faQPage Start-->
@@ -94,46 +98,103 @@
 			<!-- <h2 class="text-center fs-1 mb-5">FAQ</h2> -->
 			<div class="accordion" id="accordionExample">
 				<div class="accordion-item">
-				  <h2 class="accordion-header" id="faqHeadingOne">
-					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapseOne" aria-expanded="true" aria-controls="faqCollapseOne">
-					  Accordion Item #1
-					</button>
-				  </h2>
-				  <div id="faqCollapseOne" class="accordion-collapse collapse show" aria-labelledby="faqHeadingOne" data-bs-parent="#faqHeadingOne">
-					<div class="accordion-body">
-					  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+					<h2 class="accordion-header" id="faqHeadingOne">
+						<button
+							class="accordion-button"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#faqCollapseOne"
+							aria-expanded="true"
+							aria-controls="faqCollapseOne"
+						>
+							Accordion Item #1
+						</button>
+					</h2>
+					<div
+						id="faqCollapseOne"
+						class="accordion-collapse collapse show"
+						aria-labelledby="faqHeadingOne"
+						data-bs-parent="#faqHeadingOne"
+					>
+						<div class="accordion-body">
+							<strong>This is the first item's accordion body.</strong> It is
+							shown by default, until the collapse plugin adds the appropriate
+							classes that we use to style each element. These classes control
+							the overall appearance, as well as the showing and hiding via CSS
+							transitions. You can modify any of this with custom CSS or
+							overriding our default variables. It's also worth noting that just
+							about any HTML can go within the <code>.accordion-body</code>,
+							though the transition does limit overflow.
+						</div>
 					</div>
-				  </div>
 				</div>
 				<div class="accordion-item">
-				  <h2 class="accordion-header" id="faqHeadingTwo">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapseTwo" aria-expanded="false" aria-controls="faqCollapseTwo">
-					  Accordion Item #2
-					</button>
-				  </h2>
-				  <div id="faqCollapseTwo" class="accordion-collapse collapse" aria-labelledby="faqHeadingTwo" data-bs-parent="#accordionExample">
-					<div class="accordion-body">
-					  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+					<h2 class="accordion-header" id="faqHeadingTwo">
+						<button
+							class="accordion-button collapsed"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#faqCollapseTwo"
+							aria-expanded="false"
+							aria-controls="faqCollapseTwo"
+						>
+							Accordion Item #2
+						</button>
+					</h2>
+					<div
+						id="faqCollapseTwo"
+						class="accordion-collapse collapse"
+						aria-labelledby="faqHeadingTwo"
+						data-bs-parent="#accordionExample"
+					>
+						<div class="accordion-body">
+							<strong>This is the second item's accordion body.</strong> It is
+							hidden by default, until the collapse plugin adds the appropriate
+							classes that we use to style each element. These classes control
+							the overall appearance, as well as the showing and hiding via CSS
+							transitions. You can modify any of this with custom CSS or
+							overriding our default variables. It's also worth noting that just
+							about any HTML can go within the <code>.accordion-body</code>,
+							though the transition does limit overflow.
+						</div>
 					</div>
-				  </div>
 				</div>
 				<div class="accordion-item">
-				  <h2 class="accordion-header" id="faqHeadingThree">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapseThree" aria-expanded="false" aria-controls="faqCollapseThree">
-					  Accordion Item #3
-					</button>
-				  </h2>
-				  <div id="faqCollapseThree" class="accordion-collapse collapse" aria-labelledby="faqHeadingThree" data-bs-parent="#accordionExample">
-					<div class="accordion-body">
-					  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+					<h2 class="accordion-header" id="faqHeadingThree">
+						<button
+							class="accordion-button collapsed"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#faqCollapseThree"
+							aria-expanded="false"
+							aria-controls="faqCollapseThree"
+						>
+							Accordion Item #3
+						</button>
+					</h2>
+					<div
+						id="faqCollapseThree"
+						class="accordion-collapse collapse"
+						aria-labelledby="faqHeadingThree"
+						data-bs-parent="#accordionExample"
+					>
+						<div class="accordion-body">
+							<strong>This is the third item's accordion body.</strong> It is
+							hidden by default, until the collapse plugin adds the appropriate
+							classes that we use to style each element. These classes control
+							the overall appearance, as well as the showing and hiding via CSS
+							transitions. You can modify any of this with custom CSS or
+							overriding our default variables. It's also worth noting that just
+							about any HTML can go within the <code>.accordion-body</code>,
+							though the transition does limit overflow.
+						</div>
 					</div>
-				  </div>
 				</div>
 			</div>
 		</div>
 
 		<!-- footer -->
-				
+
 		<footer class="bg-dark mt-5">
 			<div class="row container p-4">
 				<div class="col-6">
@@ -151,7 +212,6 @@
 							USER
 						</li>
 					</ul>
-					
 				</div>
 				<div class="col-6">
 					<ul class="list-group list-group-horizontal-lg float-end">
@@ -167,24 +227,10 @@
 			</div>
 		</footer>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+			crossorigin="anonymous"
+		></script>
 	</body>
-</script>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
