--- a/faqPage.html
+++ b/faqPage.html
@@ -193,23 +193,32 @@
 			</div>
 		</div>
 
-		<!-- footer -->
-
+		<!--Footer Start-->
 		<footer class="bg-dark mt-5">
 			<div class="row container p-4">
 				<div class="col-6">
 					<ul class="list-group list-group-horizontal-lg">
 						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							ABOUT
+							<a href="aboutUs.html" style="color: white; text-decoration: none"
+								>ABOUT</a
+							>
 						</li>
 						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							CONTACT
+							<a
+								href="contactPage.html"
+								style="color: white; text-decoration: none"
+								>CONTACT</a
+							>
 						</li>
 						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							PRIVACY
+							<a href="privacy.html" style="color: white; text-decoration: none"
+								>PRIVACY</a
+							>
 						</li>
 						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							USER
+							<a href="terms.html" style="color: white; text-decoration: none"
+								>CONDITIONS</a
+							>
 						</li>
 					</ul>
 				</div>
@@ -223,9 +232,44 @@
 				</div>
 			</div>
 			<div class="row container">
-				<p class="text-white p-4">© All copy rights reserved by istdio.com</p>
+				<p class="text-white text-center p-3">
+					© All copy rights reserved by istdio.com
+				</p>
 			</div>
 		</footer>
+		<!--Footer End-->
+
+		<!--Underfooter Start-->
+
+		<footer
+			id="underfooter"
+			style="background: #191919; padding: 15px 0; color: #777; font-size: 12px"
+		>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 widget">
+						<div class="widget-body">
+							<span
+								>112 110 st Unit 12, SK S7N 1R9<br />
+								Saskatoon, Canada</span
+							>
+						</div>
+					</div>
+
+					<div class="col-md-6 widget">
+						<div class="widget-body">
+							<p class="text-right">
+								Copyright © 2021,
+								<span><a href="/">bangladesh@gmail.com</a></span
+								><br />
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+
+		<!--Underfooter End-->
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
