--- a/subject.html
+++ b/subject.html
@@ -207,56 +207,83 @@
 			</div>
 		</main>
 
-		<!-- Footer -->
-		<footer class="bg-dark">
-			<div class="row ms-3 pt-4 pb-5 gx-0">
-				<div class="col-lg-8">
-					<div>
-						<a href="#" class="footer-menu">ABOUT</a>
-						<a href="#" class="footer-menu">CONTACT</a>
-						<a href="#" class="footer-menu">PRIVACY</a>
-						<a href="#" class="footer-menu">USERS</a>
-						<a href="#" class="footer-menu">COOKIES</a>
-					</div>
-					<div class="mt-4">
-						<small id="footer-small"
-							>© QS Quacquarelli Symonds Limited 1994 - 2021. All rights
-							reserved.
-						</small>
-					</div>
+		<!--Footer Start-->
+		<footer class="bg-dark mt-5">
+			<div class="row container p-4">
+				<div class="col-6">
+					<ul class="list-group list-group-horizontal-lg">
+						<li class="list-group-item me-auto bg-dark text-white fs-6">
+							<a href="aboutUs.html" style="color: white; text-decoration: none"
+								>ABOUT</a
+							>
+						</li>
+						<li class="list-group-item me-auto bg-dark text-white fs-6">
+							<a
+								href="contactPage.html"
+								style="color: white; text-decoration: none"
+								>CONTACT</a
+							>
+						</li>
+						<li class="list-group-item me-auto bg-dark text-white fs-6">
+							<a href="privacy.html" style="color: white; text-decoration: none"
+								>PRIVACY</a
+							>
+						</li>
+						<li class="list-group-item me-auto bg-dark text-white fs-6">
+							<a href="terms.html" style="color: white; text-decoration: none"
+								>CONDITIONS</a
+							>
+						</li>
+					</ul>
 				</div>
-				<div class="col-lg-4">
-					<!-- Social Icons -->
-					<div id="social-icon-bar">
-						<div>
-							<a href="" target="_blank"
-								><img src="img/footer/facebook.png" class="social-icon" alt=""
-							/></a>
+				<div class="col-6">
+					<ul class="list-group list-group-horizontal-lg float-end">
+						<li class="list-group-item bg-dark text-white fs-6">FACEBOOK</li>
+						<li class="list-group-item bg-dark text-white fs-6">INSTAGRAM</li>
+						<li class="list-group-item bg-dark text-white fs-6">TWITTER</li>
+						<li class="list-group-item bg-dark text-white fs-6">LINKEDIN</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row container">
+				<p class="text-white text-center p-3">
+					© All copy rights reserved by istdio.com
+				</p>
+			</div>
+		</footer>
+		<!--Footer End-->
+
+		<!--Underfooter Start-->
+
+		<footer
+			id="underfooter"
+			style="background: #191919; padding: 15px 0; color: #777; font-size: 12px"
+		>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 widget">
+						<div class="widget-body">
+							<span
+								>112 110 st Unit 12, SK S7N 1R9<br />
+								Saskatoon, Canada</span
+							>
 						</div>
-						<div>
-							<a href="" target="_blank"
-								><img src="img/footer/twitter.png" class="social-icon" alt=""
-							/></a>
-						</div>
-						<div>
-							<a href="#" target="_blank"
-								><img src="img/footer/linkedin.png" class="social-icon" alt=""
-							/></a>
-						</div>
-						<div>
-							<a href="#" target="_blank"
-								><img src="img/footer/youtube.png" class="social-icon" alt=""
-							/></a>
-						</div>
-						<div>
-							<a href="#" target="_blank"
-								><img src="img/footer/instagram.png" class="social-icon" alt=""
-							/></a>
+					</div>
+
+					<div class="col-md-6 widget">
+						<div class="widget-body">
+							<p class="text-right">
+								Copyright © 2021,
+								<span><a href="/">bangladesh@gmail.com</a></span
+								><br />
+							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</footer>
+
+		<!--Underfooter End-->
 
 		<!-- JS Bundle-->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
