--- a/single-university-page.html
+++ b/single-university-page.html
@@ -301,46 +301,55 @@
 
 		<!--Footer Start-->
 		<footer class="bg-dark mt-5">
-			<div class="row container p-4">
-				<div class="col-6">
-					<ul class="list-group list-group-horizontal-lg">
-						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							<a href="aboutUs.html" style="color: white; text-decoration: none"
-								>ABOUT</a
-							>
-						</li>
-						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							<a
-								href="contactPage.html"
-								style="color: white; text-decoration: none"
-								>CONTACT</a
-							>
-						</li>
-						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							<a href="privacy.html" style="color: white; text-decoration: none"
-								>PRIVACY</a
-							>
-						</li>
-						<li class="list-group-item me-auto bg-dark text-white fs-6">
-							<a href="terms.html" style="color: white; text-decoration: none"
-								>CONDITIONS</a
-							>
-						</li>
-					</ul>
-				</div>
-				<div class="col-6">
-					<ul class="list-group list-group-horizontal-lg float-end">
-						<li class="list-group-item bg-dark text-white fs-6">FACEBOOK</li>
-						<li class="list-group-item bg-dark text-white fs-6">INSTAGRAM</li>
-						<li class="list-group-item bg-dark text-white fs-6">TWITTER</li>
-						<li class="list-group-item bg-dark text-white fs-6">LINKEDIN</li>
-					</ul>
+			<div class="container">
+				<div class="row p-4">
+					<div class="col-6">
+						<ul class="list-group list-group-horizontal-lg">
+							<li class="list-group-item me-auto bg-dark text-white fs-6">
+								<a
+									href="aboutUs.html"
+									style="color: white; text-decoration: none"
+									>ABOUT</a
+								>
+							</li>
+							<li class="list-group-item me-auto bg-dark text-white fs-6">
+								<a
+									href="contactPage.html"
+									style="color: white; text-decoration: none"
+									>CONTACT</a
+								>
+							</li>
+							<li class="list-group-item me-auto bg-dark text-white fs-6">
+								<a
+									href="privacy.html"
+									style="color: white; text-decoration: none"
+									>PRIVACY</a
+								>
+							</li>
+							<li class="list-group-item me-auto bg-dark text-white fs-6">
+								<a href="terms.html" style="color: white; text-decoration: none"
+									>CONDITIONS</a
+								>
+							</li>
+						</ul>
+					</div>
+					<div class="col-6">
+						<ul class="list-group list-group-horizontal-lg float-end">
+							<li class="list-group-item bg-dark text-white fs-6">FACEBOOK</li>
+							<li class="list-group-item bg-dark text-white fs-6">INSTAGRAM</li>
+							<li class="list-group-item bg-dark text-white fs-6">TWITTER</li>
+							<li class="list-group-item bg-dark text-white fs-6">LINKEDIN</li>
+						</ul>
+					</div>
 				</div>
 			</div>
-			<div class="row container">
-				<p class="text-white text-center p-3">
-					© All copy rights reserved by istdio.com
-				</p>
+
+			<div class="container">
+				<div class="row">
+					<p class="text-white text-center p-3">
+						© All copy rights reserved by istdio.com
+					</p>
+				</div>
 			</div>
 		</footer>
 		<!--Footer End-->
