--- a/single-university-page.html
+++ b/single-university-page.html
@@ -169,6 +169,7 @@
 					</button>
 					<button type="button" class="btn btn-light btnstudy1">Masters</button>
 					<button type="button" class="btn btn-light btnstudy1">PhD</button>
+					<hr />
 				</div>
 
 				<!-- University About -->
@@ -271,9 +272,9 @@
 				</div>
 			</div>
 
-			<div class="col-lg-3 bg-warning">
+			<div class="col-lg-3 google-adds">
 				<!-- Add Section -->
-				<div class="m-3 bg-secondary">
+				<div class="m-3">
 					<h1>
 						ADD is an older term for what is now known as the inattentive type
 						of ADHD.
